Fix image not filling container on mobile

--- a/components/GameBox/components/GameBoxBig/gameboxbig.module.css
+++ b/components/GameBox/components/GameBoxBig/gameboxbig.module.css
@@ -30,12 +30,15 @@
 .image {
   width: 250px;
   height: 250px;
-  grid-area: image;
   object-fit: cover;
   @media screen and (max-width: 768px) {
     width: 100%;
     height: 100%;
   }
+}
+
+.imagePosition {
+  grid-area: image;
 }
 
 .name {
